--- a/testdrive.html
+++ b/testdrive.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Test Drive | Tirumala TVS</title>
+    <title>Book Test Ride | Tirumala TVS</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -20,8 +20,8 @@
 
     <div class="models-header" style="background: #e31e2d; color: white; padding: 40px 0; text-align: center;">
         <div class="container">
-            <h1 style="font-size: 2.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">Experience The Ride</h1>
-            <p>Book a test drive today and feel the power of TVS engineering.</p>
+            <h1 style="font-size: 2.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">Book Test Ride</h1>
+            <p>Experience the performance before you buy.</p>
         </div>
     </div>
 
@@ -35,14 +35,14 @@
                         <input type="hidden" name="_subject" value="New Test Drive Request">
 
                         <label>Full Name <span class="required">*</span></label>
-                        <input type="text" name="name" placeholder="Your fullname" required>
+                        <input type="text" name="name" placeholder="Enter your name" required>
 
                         <label>Phone Number <span class="required">*</span></label>
-                        <input type="tel" name="phone" placeholder="Your phone number" required>
+                        <input type="tel" name="phone" placeholder="Enter phone number" required>
 
                         <label>Select Model <span class="required">*</span></label>
                         <select name="model" required>
-                            <option value="" disabled selected>Choose a Bike/Scooter</option>
+                            <option value="" disabled selected>Choose Bike/Scooter</option>
                             <option value="Apache 160 4V">Apache RTR 160 4V</option>
                             <option value="Apache 200 4V">Apache RTR 200 4V</option>
                             <option value="Raider 125">Raider 125</option>
@@ -57,12 +57,12 @@
                         <input type="date" name="date" required>
 
                         <label>Do you have a valid Driving License? <span class="required">*</span></label>
-                        <select name="license_status" required>
-                            <option value="Yes">Yes, I have a valid license</option>
+                        <select name="license_check" required>
+                            <option value="Yes">Yes, I have a license</option>
                             <option value="No">No, I do not have a license</option>
                         </select>
 
-                        <button type="submit" class="btn-submit-service" style="background-color: #e31e2d;">Book Test Drive</button>
+                        <button type="submit" class="btn-submit-service" style="background-color: #e31e2d;">Book Test Ride</button>
                     </form>
                 </div>
 
@@ -71,26 +71,29 @@
                     
                     <div class="step-item">
                         <div class="step-text">
-                            <strong>Requirement:</strong> A valid driving license is mandatory for the test ride. Please carry it with you.
+                            <strong>Step 1: License Mandatory</strong><br>
+                            Please carry a valid driving license for the test ride.
                         </div>
                     </div>
 
                     <div class="step-item">
                         <div class="step-text">
-                            <strong>Safety:</strong> A helmet will be provided for the rider. Pillion riders must also wear a helmet if accompanying.
+                            <strong>Step 2: Safety First</strong><br>
+                            A helmet will be provided. Pillion riders must also wear a helmet.
                         </div>
                     </div>
 
                     <div class="step-item">
                         <div class="step-text">
-                            <strong>Timing:</strong> Test drives are available between 10:00 AM and 6:00 PM, Monday to Saturday.
+                            <strong>Step 3: Confirmation</strong><br>
+                            Our team will call you to confirm the vehicle availability for your slot.
                         </div>
                     </div>
 
-                    <div style="margin-top: 30px; padding: 20px; background: #f9f9f9; border-left: 4px solid #e31e2d; border-radius: 4px;">
-                        <h4 style="margin-bottom: 5px;">Showroom Location</h4>
-                        <p style="color: #666; margin-bottom: 5px;">Tirumala TVS Bidarahalli</p>
-                        <a href="https://maps.google.com" target="_blank" style="color: #1a3b8c; font-weight: bold; font-size: 0.9rem;">📍 View on Google Maps</a>
+                    <div style="margin-top: 30px; background: #f9f9f9; padding: 20px; border-left: 4px solid #e31e2d; border-radius: 4px;">
+                        <h4>Location</h4>
+                        <p style="color: #555;">Tirumala TVS, Main Road, Bidarahalli.</p>
+                        <p style="color: #e31e2d; font-weight: bold; margin-top: 5px;">📞 +91 99649 46512</p>
                     </div>
                 </div>
 
