--- a/about.html
+++ b/about.html
@@ -16,137 +16,92 @@
                 <a href="index.html" class="btn-header">Back to Home</a>
             </div>
         </div>
-        <div class="nav-bar" id="navMenu">
+        <div class="nav-bar">
             <div class="container">
-                <ul class="nav-menu">
+                <ul class="nav-menu" style="justify-content:center;">
                     <li class="nav-item"><a href="index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html" style="color: var(--primary);">About Us</a></li>
+                    <li class="nav-item"><a href="about.html" style="color:var(--primary);">About TVS</a></li>
                     <li class="nav-item"><a href="contact.html">Contact Us</a></li>
-                    
-                    <li class="nav-item dropdown">
-                        <a href="models.html">Models <span class="nav-arrow">▼</span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="models/apache160.html">Apache Series</a></li>
-                            <li><a href="models/raider.html">Raider 125</a></li>
-                            <li><a href="models/jupiter113.html">Jupiter Series</a></li>
-                            <li><a href="models/ntorq125.html">Ntorq Series</a></li>
-                            <li><a href="models/iqube.html">iQube Electric</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="service.html">Services</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="models-header" style="background: #111; color: white; padding: 60px 0; text-align: center;">
+    <div class="models-header" style="background: #1a3b8c; color: white; padding: 60px 0; text-align: center;">
         <div class="container">
-            <h1 style="font-size: 3rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">About Us</h1>
-            <p>The Legacy of Trust, Value, and Service.</p>
+            <h1 style="font-size: 3.5rem; font-family: 'Oswald', sans-serif; text-transform: uppercase;">The TVS Legacy</h1>
+            <p>Over 100 Years of Trust, Innovation, and Service.</p>
         </div>
     </div>
 
     <section class="section-padding">
-        <div class="container welcome-grid">
-            <div class="welcome-text">
-                <span class="welcome-badge" style="background:var(--primary); color:white;">AUTHORIZED MAIN DEALER</span>
-                <h2 style="margin-top: 15px; color: var(--primary);">Welcome to Tirumala TVS</h2>
-                <p>Located in the heart of <strong>Bidarahalli, Bangalore</strong>, Tirumala TVS is your premier destination for TVS two-wheelers. We are committed to delivering the "TVS Promise" of quality and customer satisfaction.</p>
-                <p>Whether you are looking for a daily commuter like the <strong>Jupiter</strong>, a racing beast like the <strong>Apache</strong>, or a sustainable electric ride like the <strong>iQube</strong>, we ensure a seamless buying experience with transparent pricing, quick finance approvals, and excellent after-sales service.</p>
-            </div>
-            <div class="welcome-icons">
-                <img src="assets/hero-bg.jpg.jpg" alt="Tirumala TVS Showroom" style="width:100%; border-radius:8px; box-shadow: var(--shadow);">
+        <div class="container">
+            <div class="welcome-text text-center" style="max-width: 800px; margin: 0 auto;">
+                <span class="badge" style="position:static; display:inline-block; margin-bottom:15px;">AUTHORIZED DEALER</span>
+                <h2 style="font-size: 2.5rem; color: #1a3b8c; font-family: 'Oswald', sans-serif;">Welcome to Tirumala TVS</h2>
+                <p style="font-size: 1.1rem; line-height: 1.8; color: #555;">
+                    Located in <strong>Bidarahalli, Bangalore</strong>, we are proud to represent TVS Motor Company. 
+                    Our mission is to bring the world-class engineering of TVS to your doorstep with unmatched customer service, 
+                    transparent dealings, and a commitment to your riding joy.
+                </p>
             </div>
         </div>
     </section>
 
     <section class="section-padding bg-light">
         <div class="container">
-            <div class="text-center section-header">
-                <h2 style="color: var(--accent);">The TVS Legacy</h2>
-                <p>A 100+ Year History of Innovation</p>
+            <div class="text-center section-header" style="margin-bottom: 50px;">
+                <h2 style="font-family: 'Oswald', sans-serif; color: #d32f2f;">A to Z of TVS Motor Company</h2>
+                <p>From a bus service in 1911 to a global motorcycle giant today.</p>
             </div>
 
-            <div class="history-grid" style="margin-top: 50px;">
+            <div class="history-grid">
                 
                 <div class="history-card">
-                    <h3>1911 - The Beginning</h3>
-                    <p>The TVS Group was founded by <strong>Shri T.V. Sundaram Iyengar</strong>. It began as a bus service in Madurai and grew into one of India's largest automotive conglomerates, built on the values of Trust, Value, and Service.</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1911</div>
+                    <h3>The Foundation</h3>
+                    <p>Founded by <strong>Shri T.V. Sundaram Iyengar</strong>, the TVS Group began as a bus service in Madurai. It became synonymous with punctuality ("You can set your watch by a TVS bus").</p>
                 </div>
 
                 <div class="history-card">
-                    <h3>1980 - India's First 2-Seater Moped</h3>
-                    <p>TVS launched the <strong>TVS 50</strong>, India’s first two-seater moped. It revolutionized personal mobility in India, becoming a household name for durability and affordability.</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1980</div>
+                    <h3>India's First 2-Seater Moped</h3>
+                    <p>TVS launched the <strong>TVS 50</strong> from its Hosur factory. It was India's first two-seater moped and revolutionized personal transport for the common man.</p>
                 </div>
 
                 <div class="history-card">
-                    <h3>The Racing DNA</h3>
-                    <p><strong>TVS Racing</strong> (est. 1982) is the first factory racing team in India. This racing experience directly influences the engineering of the <strong>Apache Series</strong>, bringing track performance to the road.</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">1982</div>
+                    <h3>Birth of TVS Racing</h3>
+                    <p>TVS established <strong>TVS Racing</strong>, the first factory racing team in India. This racing DNA is now infused into every Apache and Ntorq engine.</p>
                 </div>
 
                 <div class="history-card">
-                    <h3>Global Partnerships</h3>
-                    <p>TVS Motor Company has a strategic partnership with <strong>BMW Motorrad</strong> (manufacturing the G310R and Apache RR310). In 2020, TVS acquired the iconic British brand, <strong>Norton Motorcycles</strong>.</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2002</div>
+                    <h3>The Deming Prize</h3>
+                    <p>TVS Motor Company became the <strong>first two-wheeler company in the world</strong> to be awarded the prestigious Deming Prize for Total Quality Management.</p>
                 </div>
 
                 <div class="history-card">
-                    <h3>Quality Excellence</h3>
-                    <p>TVS Motor is the only two-wheeler manufacturer in the world to be awarded the prestigious <strong>Deming Prize</strong> for Total Quality Management (TQM).</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2013</div>
+                    <h3>BMW Partnership</h3>
+                    <p>TVS signed a long-term strategic partnership with <strong>BMW Motorrad</strong>. Together, they developed the world-class 310cc platform (Apache RR 310).</p>
                 </div>
 
                 <div class="history-card">
-                    <h3>Future Mobility</h3>
-                    <p>With the launch of the <strong>TVS iQube</strong> and the premium <strong>TVS X</strong>, the company is leading the charge in sustainable, electric urban mobility.</p>
+                    <div style="font-size: 3rem; color: #d32f2f; margin-bottom: 10px;">2020</div>
+                    <h3>Acquisition of Norton</h3>
+                    <p>TVS acquired the iconic British brand <strong>Norton Motorcycles</strong>, marking its entry into the super-premium global motorcycle market.</p>
                 </div>
 
             </div>
         </div>
     </section>
 
-    <div style="background: var(--primary); color: white; padding: 50px 0;">
-        <div class="container" style="display: grid; grid-template-columns: repeat(4, 1fr); text-align: center; gap: 20px;">
-            <div>
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 3rem;">80+</h2>
-                <p>Countries Present</p>
-            </div>
-            <div>
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 3rem;">50M+</h2>
-                <p>Happy Customers</p>
-            </div>
-            <div>
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 3rem;">4</h2>
-                <p>Manufacturing Plants</p>
-            </div>
-            <div>
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 3rem;">#1</h2>
-                <p>In Customer Satisfaction</p>
-            </div>
-        </div>
-    </div>
-
     <footer class="footer">
-        <div class="footer-top-bar">
-            <div class="container footer-contact-row">
-                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
-                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
-            </div>
+        <div class="container text-center">
+            <p>&copy; 2025 Tirumala TVS. All Rights Reserved.</p>
         </div>
-        <div class="footer-main">
-            <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book a Service</a></li><li><a href="testdrive.html">Book a Test Drive</a></li></ul></div>
-                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
-            </div>
-        </div>
-        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <script>
-        function toggleMenu() {
-            var nav = document.getElementById("navMenu");
-            if(nav.style.display === "block") { nav.style.display = "none"; } 
-            else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
-        }
-    </script>
 </body>
 </html>
