--- a/service.html
+++ b/service.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,10 +35,10 @@
                         <input type="hidden" name="_subject" value="New Service Booking">
 
                         <label>Name <span class="required">*</span></label>
-                        <input type="text" name="name" placeholder="Your fullname" required>
+                        <input type="text" name="name" required>
 
                         <label>Phone <span class="required">*</span></label>
-                        <input type="tel" name="phone" placeholder="Your phone number" required>
+                        <input type="tel" name="phone" required>
 
                         <label>Vehicle Registration No. <span class="required">*</span></label>
                         <input type="text" name="vehicle_no" placeholder="KA-00-XX-0000" required>
@@ -50,10 +49,9 @@
                         <label>Service Type <span class="required">*</span></label>
                         <select name="service_type" required>
                             <option value="General Service">General Paid Service</option>
-                            <option value="Free Service">Free Service (New Vehicle)</option>
+                            <option value="Free Service">Free Service</option>
                             <option value="Oil Change">Oil Change Only</option>
-                            <option value="Repair/Accidental">Repair / Accidental</option>
-                            <option value="Breakdown">Breakdown Assistance</option>
+                            <option value="Repair">Repair / Accidental</option>
                         </select>
 
                         <button type="submit" class="btn-submit-service">Confirm Appointment</button>
@@ -61,18 +59,11 @@
                 </div>
 
                 <div class="service-info">
-                    <h3>How the Appointment works</h3>
-                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill in your contact and vehicle details.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Our advisor will call to confirm the slot.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> Receive confirmation via SMS/WhatsApp.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 4:</strong> Drop your vehicle at the scheduled time.</div></div>
-                    <div class="step-item"><div class="step-text"><strong>Step 5:</strong> We notify you when it's ready!</div></div>
-                    
-                    <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #eee;">
-                        <h4>Service Center Location</h4>
-                        <p style="color: #666;">Main Road, Bidarahalli, Bangalore - 560049</p>
-                        <p style="color: #666;">📞 +91 99649 46512</p>
-                    </div>
+                    <h3>How it works</h3>
+                    <div class="step-item"><div class="step-text"><strong>Step 1:</strong> Fill in your details.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 2:</strong> Advisor calls to confirm.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 3:</strong> Drop vehicle at scheduled time.</div></div>
+                    <div class="step-item"><div class="step-text"><strong>Step 4:</strong> We notify you when ready!</div></div>
                 </div>
             </div>
         </div>
@@ -81,5 +72,17 @@
     <footer class="footer">
         <div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div>
     </footer>
+
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
+
+    <script>
+        window.addEventListener('scroll', function() {
+            var scrollBtn = document.querySelector('.scroll-top-btn');
+            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } 
+            else { scrollBtn.classList.remove('visible'); }
+        });
+    </script>
 </body>
 </html>
