--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a href="models.html#electric">Electric & Mopeds <span class="nav-arrow">▼</span></a>
+                        <a href="models.html#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/iqube.html">iQube Electric</a></li>
-                            <li><a href="models/xl100.html">XL100 Heavy Duty</a></li>
+                            <li><a href="models/iqube.html">iQube</a></li>
                         </ul>
                     </li>
 
@@ -78,6 +77,7 @@
             <a href="service.html" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
             <a href="testdrive.html" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
             <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
+            <a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" class="action-item"><span class="icon icon-insta">📸</span><span>Instagram</span></a>
             <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
     </div>
@@ -110,17 +110,6 @@
         </div>
     </section>
 
-    <section class="section-padding" style="background-color: #f4f4f4;">
-        <div class="container">
-            <div class="text-center section-header"><h2>Happy Riders</h2><p>What our customers say about Tirumala TVS.</p></div>
-            <div class="grid-3" style="margin-top: 40px;">
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V."</p><h4>– Arjun Kumar</h4><span>Apache Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff helped me decide."</p><h4>– Priya Sharma</h4><span>Jupiter Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Best service center in Bidarahalli. Fast and reliable."</p><h4>– Rahul M.</h4><span>Service Customer</span></div>
-            </div>
-        </div>
-    </section>
-
     <footer>
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
@@ -132,13 +121,20 @@
             <div class="container footer-cols">
                 <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="about.html">About Us</a></li><li><a href="contact.html">Contact Us</a></li><li><a href="service.html">Book Service</a></li><li><a href="testdrive.html">Test Drive</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="models.html#motorcycles">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="contact.html">Tirumala TVS Bidarahalli</a></li></ul></div>
+                
+                <div class="footer-col">
+                    <h4>Connect With Us</h4>
+                    <ul class="footer-links">
+                        <li><a href="contact.html">Tirumala TVS Bidarahalli</a></li>
+                        <li><a href="https://www.instagram.com/tirumalatvs_bidarahalli/" target="_blank" style="color: #E1306C; font-weight: bold;">Follow us on Instagram ↗</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
 
-    <a href="https://wa.me/919964946512?text=Hi%20Tirumala%20TVS" class="whatsapp-float" target="_blank">💬</a>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
     
     <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
